--- a/Nostalgia/Main Page/MainPage.css
+++ b/Nostalgia/Main Page/MainPage.css
@@ -1,7 +1,6 @@
 /*===================Google Fonts===================*/
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100&display=swap');
- */
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100&display=swap');
+ 
 /*===================Reset Website===================*/
 * 
 {
@@ -672,7 +671,6 @@ table {
                 text-align: justify;
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             }
-
 /*===================World of Cafe===================*/
 #WoC
 {
@@ -870,7 +868,7 @@ table {
 #bottom
 {
     background: #000000;
-    height: 1400px;
+    height: 2000px;
     color: #FFFFFF;
 }
 
@@ -952,7 +950,6 @@ table {
     }
 
 
-
 /*===================Tabs Content===================*/
 .tab-content {margin: 50px 150px 50px 150px;} /*Trên, phải, dưới, trái*/
 
@@ -1021,7 +1018,7 @@ table {
 .tab-content .second-intro 
 {
     margin-left: 12px;
-    background-image: url("https://s35422.pcdn.co/wp-content/uploads/2021/03/5.17.21_God-Has-a-Plan-1024x683-1.jpg");
+    background-image: url("https://i.pinimg.com/originals/0c/ba/95/0cba95d22a2be1d0f261e66b03815101.gif");
     background-size: cover;
     margin-top: 15px;
     width: inherit;
@@ -1034,36 +1031,36 @@ table {
         position: relative;
         width: 600px;
         left: 28%;
-        top: 35%;
+        top: 40%;
         font-size: 28px;
-        color: #000000;
+        color: #FFFFFF;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
     .tab-content .second-intro button
     {
         position: relative;
-        left: 47%;
-        top: 40%;
-        border: 1px solid #000000;
-        color: #000000;
+        left: 46%;
+        top: 45%;
+        border: 1px solid #FFFFFF;
         background-color: transparent;
-        width: 100px;
+        width: 130px;
         height: 50px;
         font-weight: 600;
+        color: #FFFFFF
     }
 
     .tab-content .second-intro button:hover
         {
-            background-color: #1D1D1D;
-            color: #FFFFFF;
+            background-color: #FFFFFF;
+            color: #1D1D1D;
             transition: 0.4s;
         }
 
 .tab-content .third-intro 
 {
     margin-left: 12px;
-    background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/vinyl-record-in-black-and-white-hunter-pippin.jpg");
+    background-image: url("https://i.pinimg.com/originals/b7/cf/0a/b7cf0a2189fd2be490c40819c538f783.gif");
     background-size: cover;
     margin-top: 15px;
     width: inherit;
@@ -1078,7 +1075,7 @@ table {
         left: 24%;
         top: 40%;
         font-size: 28px;
-        color: #FFFFFF;
+        color: #1D1D1D;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
@@ -1087,18 +1084,18 @@ table {
         position: relative;
         left: 44%;
         top: 45%;
-        border: 1px solid #FFFFFF;
-        color: #FFFFFF;
+        border: 1px solid #1D1D1D;
         background-color: transparent;
-        width: 100px;
+        width: 130px;
         height: 50px;
         font-weight: 600;
+        color: #1D1D1D
     }
 
     .tab-content .third-intro button:hover
         {
-            background-color: #FFFFFF;
-            color: #1D1D1D;
+            background-color: #1D1D1D;
+            color: #FFFFFF;
             transition: 0.4s;
         }
 
@@ -1107,7 +1104,7 @@ table {
 .tab-content .fourth-intro 
 {
     margin-left: 12px;
-    background-image: url("https://scontent.fhan4-3.fna.fbcdn.net/v/t39.30808-6/385459025_1377645386163195_3175269671677445799_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6a0516&_nc_ohc=neD8rWRtwxQAX-AZilZ&_nc_ht=scontent.fhan4-3.fna&oh=00_AfDjvkmK_VBBfj1objDFkpnIhInoNaWZI1wr71MYtZwDfQ&oe=651E9727");
+    background-image: url("https://i.pinimg.com/originals/f3/9d/80/f39d8099f2ca17534a3058e7bdb07efb.gif");
     background-size: cover;
     margin-top: 15px;
     width: inherit;
@@ -1118,7 +1115,7 @@ table {
     .tab-content .fourth-intro h2
     {
         position: relative;
-        width: 700px;
+        width: 800px;
         left: 20%;
         top: 40%;
         font-size: 28px;
@@ -1132,11 +1129,11 @@ table {
         left: 44%;
         top: 45%;
         border: 1px solid #FFFFFF;
-        color: #FFFFFF;
         background-color: transparent;
-        width: 100px;
+        width: 130px;
         height: 50px;
         font-weight: 600;
+        color: #FFFFFF
     }
 
     .tab-content .fourth-intro button:hover
@@ -1148,11 +1145,16 @@ table {
 
 
 /*===================Begin Tabs Content===================*/
-.item-product-sell {margin-top: 70px;}
-
-.item-product-sell-row{
-    display: flex;
+.item-product-sell
+{
+    margin-top: 70px;
 }
+.item-product-sell-row{
+    display: grid;
+    grid-template-columns: 370px 370px 370px;
+    column-gap: 10px;
+}
+
 
 .hover-image{position: relative;}
 
@@ -1179,6 +1181,7 @@ table {
     margin-top: 310px;
     color: #EBEBEB;
     font-family: Arial, Helvetica, sans-serif;
+    width: 370px;
 }
 
     .hover-content .cnt-title, .hover-content .cnt-subtitle
@@ -1210,6 +1213,8 @@ table {
 {
     display: flex;
     font-size: 14px;
+    width: 200px;
+    margin-bottom: 70px;
 }
 
     .see-clear #eyesa a
@@ -1222,6 +1227,39 @@ table {
         {
             color: #AE8F1F
         }
+
+    .see-clear #eyesa1 a, .see-clear #eyesa2 a, .see-clear #eyesa3 a, .see-clear #eyesa4 a, .see-clear #eyesa5 a
+    {
+        margin-right: 10px;
+        color: #EBEBEB;
+    }
+
+        .see-clear #eyesa1 a:hover, .see-clear #eyesa2 a:hover, .see-clear #eyesa3 a:hover, .see-clear #eyesa4 a:hover, .see-clear #eyesa5 a:hover
+        {
+            color: #AE8F1F
+        }
+
+    .see-clear #eyesa6 a, .see-clear #eyesa7 a, .see-clear #eyesa8 a, .see-clear #eyesa9 a, .see-clear #eyesa10 a, .see-clear #eyesa11 a
+    {
+        margin-right: 10px;
+        color: #EBEBEB;
+    }
+
+        .see-clear #eyesa6 a:hover, .see-clear #eyesa7 a:hover, .see-clear #eyesa8 a:hover, .see-clear #eyesa9 a:hover, .see-clear #eyesa10 a:hover, .see-clear #eyesa11 a:hover
+        {
+            color: #AE8F1F
+        }
+
+    .see-clear #eyesa12 a
+    {
+        margin-right: 10px;
+        color: #EBEBEB;
+    }
+
+        .see-clear #eyesa11 a:hover
+            {
+                color: #AE8F1F
+            }
 
     .see-clear .clearly a
     {
@@ -1250,11 +1288,14 @@ table {
                 display: block;
             }
 
+/*===================Begin Modal 1===================*/
+
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 999; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 50px; /* Location of the box */
+  padding-bottom: 100px;
   left: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
@@ -1271,11 +1312,13 @@ table {
     padding: 0;
     border: 1px solid #888;
     width: 100px;
+    height: 500px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
+    overflow: inherit;
 }
 
 @-webkit-keyframes animatetop {
@@ -1289,15 +1332,692 @@ table {
 }
 
 /* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.modal-content .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
 }
 
-.close:hover, .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+    .close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close1 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close1:hover, .close1:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close2 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close2:hover, .close2:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close3 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close3:hover, .close3:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close4 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close4:hover, .close4:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close5 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close5:hover, .close5:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close6 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close6:hover, .close6:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close7 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close7:hover, .close7:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close8 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close8:hover, .close8:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close9 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close9:hover, .close9:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close10 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close10:hover, .close10:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close11 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close11:hover, .close11:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+.modal-content .close12 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: 10px;
+}
+
+    .close12:hover, .close12:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
+/*===================Begin Modal Content One===================*/
+.modal-cnt .cnt-left
+{
+    float: left;
+    width: 38%;
+}
+
+    .modal-cnt .column img
+    {
+        width: 70px;
+        height: 70px;
+        margin-top: 7px;
+    }
+
+    .modal-cnt .mySlides img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .modal-cnt .mySlide img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .modal-cnt .mySlides1 img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .modal-cnt .mySlides2 img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .modal-cnt .mySlide3 img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .modal-cnt .mySlides4 img
+    {
+        width: 300px;
+        height: 300px;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+
+    .cnt-left-containe {
+    position: relative;
+    }
+
+    .mySlides {
+    display: none;
+    margin-bottom: 10px;
+    }
+
+    .cursor {
+    cursor: pointer;
+    }
+
+    .row:after {
+    content: "";
+    display: table;
+    clear: both;
+    }
+
+    .column {
+    float: left;
+    width: 16.66%;
+    margin-right: 10px;
+    }
+
+    .demo {
+    opacity: 0.6;
+    }
+
+    .active, .demo:hover {opacity: 1;}
+
+.modal-cnt .cnt-right
+{
+    float: left;
+    width: 59%;
+    margin-top: 30px;
+}
+
+    .modal-cnt .cnt-right h3
+    {
+        font-size: 20px;
+    }
+
+    .cnt-right .prices
+    {
+        margin-top: 12px;
+        font-size: 15px;
+        font-weight: 800;
+        color: #C70909;
+    }
+
+    .cnt-right span
+    {
+        font-weight: 100;
+        font-size: 13px;
+        text-decoration: line-through;
+        color: #1D1D1D;
+    }
+
+    .cnt-right-product p
+    {
+        margin-top: 15px;
+        width: 600px;
+        text-align: justify;
+    }
+
+    .cnt-right-product .loai
+    {
+        font-size: 13px;
+        font-weight: 800;
+    }
+
+#roast{ 
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #818181;
+    border-radius: 4px;
+    resize: vertical;
+    color: #1D1D1D
+}
+
+  
+.cnt-right-product input
+{
+    width: 20%;
+    padding: 12px;
+    border: 1px solid #818181;
+    border-radius: 4px;
+    resize: vertical;
+    color: #1D1D1D;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+.cnt-right-product .add-product
+{
+    width: 40%;
+    padding: 12px;
+    border: 1px solid #818181;
+    border-radius: 4px;
+    resize: vertical;
+    color: #FFFFFF;
+    margin-top: 10px; 
+    background-color: #1D1D1D;
+    transition: 0.5s ease-in-out;
+}
+
+    .cnt-right-product .add-product:hover
+    {
+        background-color: #FFFFFF;
+        color: #1D1D1D;
+    }
+
+    .cnt-right-product .loais
+    {
+        font-size: 13px;
+        font-weight: 800;
+        margin-top: 2px;
+        width: 200px;
+        text-decoration: none;
+        margin-right: 10px;
+    }
+
+.cnt-right-product .social
+{
+    width: 600px;
+    position: fixed;
+}
+
+.fab {
+    padding: 5px;
+    font-size: 35px;
+}
+
+    .fab:hover {
+        text-decoration: none;
+        color: none;
+    }
+
+.fa-facebook {color: #3B5998;}
+
+.fa-twitter {color: #55ACEE;}
+
+.fa-google {color: #dd4b39;}
+
+.fa-instagram {color: #125688;}
+
+
+/*===================Pagination===================*/
+.listPage{
+    padding: 5px;
+    text-align: center;
+    list-style: none;
+}
+.listPage li{
+    background-color: #000000;
+    padding:20px;
+    display: inline-block;
+    margin:0 10px;
+    cursor: pointer;
+}
+.listPage .active{
+    background-color: #000000;
+    color:#fff;
+    border: 1px solid #FFFFFF;
+}
+
+/*===================Blog===================*/
+#blog
+{
+    width: 100%;
+    height: 130px;
+    padding-top: 50px;
+    padding-left: 240px;
+    padding-right: 100px;
+}
+
+.blog-container
+{
+    margin-bottom: 30px;
+    padding-bottom: 50px;
+}
+
+.blog-nos
+{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.post{font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
+
+.listen
+{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: absolute;
+    max-width: inherit;
+    margin: 0;
+    width: auto;
+    font-size: 18px;
+    line-height: 20px;
+    margin-left: 10px;
+    margin-top: 6px;
+}
+
+.control i
+{
+    margin-top: 8px;
+    float: right;
+    font-size: 20px;
+    padding-right: 5px;
+    color: #000000;
+}
+
+    .control i:hover{color: #9A7D36;}
+
+/*===================Wrapper===================*/
+#bai-viet-moi{
+    height: 550px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.row-col{width: 330px;}
+
+.row-col img
+{
+    width: 330px;
+    height: 200px;
+}
+
+.row-col .title-blog
+    {
+        margin-top: 15px;
+    }
+
+.row-col .title-blog a{
+    color: #1D1D1D;
+    margin-bottom: 0;
+    width: 330px;
+}
+
+    .row-col .title-blog a:hover
+    {
+        text-decoration: none;
+        color: #AE8F1F;
+    }
+
+.row-col .date
+{
+    margin-top: -10px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    color: #888;
+}
+
+.row-col .blog-content p
+{
+    text-align: justify;
+}
+
+
+/*===================Footer===================*/
+footer
+{
+    width: 100%;
+    bottom: 0;
+    background: linear-gradient(to left, #000000, #9A7D36);
+    color: #FFFFFF;
+    padding: 50px 0px 15px 0px ;
+    border-top-left-radius: 125px;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+footer .brands-logo
+{
+    width: 70px;
+    height: 70px;
+}
+
+footer .brands
+{
+    width: 160px;
+    height: 42px;
+    margin-bottom: 0px;
+}
+
+.row-footer
+{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.col-footer
+{
+    flex-basis: 25%;
+    padding: 10px;
+}
+
+.row-footer h3
+{
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.email-id
+{
+    width: fit-content;
+    border-bottom: 1px solid #CCC;
+    margin: 20px 0;
+}
+
+.ul-chan li{margin-bottom: 12px;}
+
+.ul-chan li a
+{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+    .ul-chan li a:hover
+    {
+        text-decoration: none;
+        color: #A78C59
+    }
+
+form
+{
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #CCC;
+    margin-bottom: 50px;
+}
+
+    form .far
+    {
+        font-size: 18px;
+        margin-right: 10px;
+    }
+
+form input
+{
+    background: transparent;
+    color: #CCC;
+    border: 0;
+    outline: none;
+}
+
+form button
+{
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+    form .fas
+    {
+        font-size: 16px;
+        margin-right: 10px;
+        color: #F1F1F1
+    }
+
+.social-icons .fab
+{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    font-size: 20px;
+    color: #000;
+    background: #FFFFFF;
+    margin-right: 15px;
+}
+
+.hr-chan
+{
+    width: 90%;
+    border: 0;
+    border-bottom: 1px solid #fff;
+    margin: 20px auto;
+}
+
+.copyright{
+    text-align: center;
+    font-weight: 600px;
+}
+
+.underline
+{
+    width: 100%;
+    height: 3px;
+    background: #767676;
+    border-radius: 3px;
+    position: absolute;
+    top: 35px;
+    left: 0;
+    overflow: hidden;
+}
+
+.underline span
+{
+    width: 15px;
+    height: 100%;
+    background: #FFFFFF;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+
+@keyframes moving
+{
+    0%{
+        left: -20px;
+    }
+
+    100%
+    {
+        left: 100%;
+    }
 }
